# devilutionX

./: CMakeLists.txt  TODO.md  diablo.ini
CMake/: corrosion_cxx.cmake
Source/: CMakeLists.txt  diablo.cpp  engine.cpp
Source/bridge_scaffold/: bridge_scaffold.cpp  bridge_scaffold.h
Source/engine/: direction.hpp
rust_devil/: CMakeLists.txt  Cargo.toml  build.rs
rust_devil/src/: lib.rs
